# python-ml-server

./: .env  .gitignore  README.md  application.dockerfile  docker-compose.yaml  mypy.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 1d3bf9360d82_initial_setup.py  daa63eb9744a_added_tables.py
app/: backend_pre_start.py  config.py  log.py  main.py  start-uvicorn.sh
app/api/: deps.py  security.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: feedback.py  image.py  login.py  report.py  search.py  user.py
app/api/endpoints/: health_check.py
app/db/: base.py  init_db.py  session.py
app/db/crud/: __init__.py  base.py  crud_feedback.py  crud_search.py  crud_user.py
app/db/models/: __init__.py  feedback.py  search.py  user.py
app/schemas/: __init__.py  feedback.py  report.py  search.py  token.py
app/services/: image_search.py
